--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h1>{{user.knownAs}}'s profile</h1>
+    <h1>{{user.knownAs}}'s profile</h1>
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
@@ -41,10 +41,10 @@
           </tab>
           <tab heading="Interests">
             <h4>Interests</h4>
-            <p>{{user.interest}}</p>
+            <p>{{user.interests}}</p>
           </tab>
           <tab heading="Photos">
-            <ngx-gallery [options] = "galleryOptions" [images] = "galleryImages" ></ngx-gallery>
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Messages">
             <p>Messages will go here</p>
